clusters/production/media/ombi/ombi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  namespace: media
  labels:
    app: ombi
    app.kubernetes.io/name: ombi
    app.kubernetes.io/instance: ombi
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ombi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ombi
        app.kubernetes.io/name: ombi
        app.kubernetes.io/instance: ombi
        app.kubernetes.io/managed-by: flux
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: ombi
        image: linuxserver/ombi:4.53.5 # {"$imagepolicy": "flux-system:ombi"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3579
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
        volumeMounts:
        - name: ombi-config
          mountPath: /config
      volumes:
      - name: ombi-config
        persistentVolumeClaim:
          claimName: pvc-ombi-config
---
apiVersion: v1
kind: Service
metadata:
  name: ombi
  namespace: media
  labels:
    app: ombi
    app.kubernetes.io/name: ombi
    app.kubernetes.io/instance: ombi
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app: ombi
  ports:
  - name: ombi
    port: 3579
    targetPort: 3579
  type: ClusterIP
