clusters/production/media/ombi/ombi-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ombi
  namespace: default
spec:
  parentRefs:
  - name: external
    namespace: gateway
    sectionName: https
  hostnames:
  - requests.rees.ca
  rules:
  - backendRefs:
    - name: ak-outpost-authentik-embedded-outpost
      namespace: identity
      port: 9000
