clusters/production/media/ombi/ombi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: https://auth.rees.ca/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.rees.ca/oauth2/start?rd=$scheme://$best_http_host$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-Preferred-Username"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx  
  tls:
  - hosts:
    - "requests.rees.ca"
    secretName: tls-ombisecret 
  rules:
  - host: "requests.rees.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ombi
            port:
              number: 3579
